[package]
name = "torture-mdbx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.6", features = ["derive"] }
rand = "0.8.5"
rand_pcg = "0.3.1"
reth-libmdbx = { git = "https://github.com/paradigmxyz/reth.git" }
rocksdb = "0.22.0"

[profile.release]
debug = 1
